--- a/pages/pages-root-folder/404.md
+++ b/pages/pages-root-folder/404.md
@@ -1,18 +1,11 @@
 ---
 layout: page
-title: "Oops! Nothing here..."
-subheadline: "HTTP 404"
-teaser: "Maybe the webpage was moved or deleted; or did you maybe mistype the link?"
+title: "Oops! This page does not exist ... "
+teaser: "That's awkward, almost as awkward as this awkward turtle. Perhaps the webpage was moved and/or deleted."
 sitemap: false
 permalink: "/404.html"
+header:
+    image_fullwidth: header_unsplash_leaf.jpg
+image:
+    title: awkward-turtle.gif
 ---
-## No problem!
-
-Try...  
-...to start over on the [home page]({{ site.baseurl }}/);  
-...to **search** below;  
-if you can't find it, [ask about it]({{ site.baseurl }}/contact/).
-
-### Search
-
-{% include _google_search.html %}
